# 333n

./: CMakeLists.txt  LICENSE  Makefile  README.md  build_windows.bat  version.h.in
.github/workflows/: build_windows.yml
include/: v3_config.h  v3_core.h  v3_guard.h  v3_ipc.h  v3_lifecycle.h  v3_platform.h
src/: v3_config.c  v3_connection.c  v3_crypto.c  v3_entry.c  v3_exit.c  v3_fec.c  v3_guard.c  v3_internal.h  v3_ipc.c  v3_lifecycle.c  v3_pacing.c  v3_protocol.c  win_memory.c  win_pipe.c  win_platform.c  win_process.c
